--- a/paginas/desporto.html
+++ b/paginas/desporto.html
@@ -79,8 +79,7 @@
         <ul>
             <li><a href="terms-of-use.html">Termos de uso</a></li>
             <li><a href="privacy-policy.html">Política de Privacidade</a></li>
-            <li><a href="contact-us.html">Contacta nos</a></li>
-        </ul>
+            <li><a href="contact-us.html" onmouseover="animateContacts()">Contacta nos</a></li><ul id="contactAnimation"><li>Email: jornalOnline@net.com</li><li>Telefone: +351 964524156</li></ul>
     </footer>
 
     <script src="script.js"></script>
