--- a/paginas/individual.html
+++ b/paginas/individual.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arte</title>
+    <title id="categoria-individual"></title>
     <link rel="stylesheet" href="../styles/individual.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -54,32 +54,32 @@
 
     <div class="news-grid">
         <div class="news-item">
-            <img src="../img/desporto/desporto5.jpg" alt="Top Story 1" />
+            <a href="./individual.html?id=17"><img src="../img/desporto/desporto5.jpg" alt="Top Story 2" /></a>
             <h2>Salt Bae, o homem do bife de ouro que entrou no relvado na final do Mundlal</h2>
             <p>Chef turco conseguiu entrar, de forma inexplicável, no relvado, após a final do Mundial de futebol entre Argentina e França.</p>
         </div>
         <div class="news-item">
-            <img src="../img/ciencia/ciencia6.jpg" alt="Top Story 2" />
+            <a href="individual.html?id=12"><img src="../img/ciencia/ciencia6.jpg" alt="Top Story 3" /></a>
             <h2>Cientistas identificam mutação genética associada a linfomas e cancro do pulmão</h2>
             <p>Estudos recentes "de sequenciação do genoma de um grande número de tumores" demonstram "que estes têm milhares de alterações genéticas, as denominadas mutações".</p>
         </div>
         <div class="news-item">
-            <img src="../img/politica/politica4.jpg" alt="Top Story 1" />
+            <a href="./individual.html?id=28"><img src="../img/politica/politica4.jpg" alt="Top Story 1" /></a>
             <h2>Marcelo Rebelo de Sousa: "Eu não decido o que se faz. Tenho de ir controlando o que quem decide faz"</h2>
             <p>O Presidente da República disse que a sua função é de "ir controlando o que quem decide faz", salientando que se pensassem exatamente o mesmo, "não valia a pena" haver Presidente e primeiro-ministro.</p>
         </div>
         <div class="news-item">
-            <img src="../img/internacional/internacional2.jpg" alt="Top Story 2" />
+            <a href="./individual.html?id=20"><img src="../img/internacional/internacional2.jpg" alt="Top Story 2" /></a>
             <h2>Kiev garante ter repelido ataque noturno de drones russos</h2>
             <p>Dos 70 mísseis de cruzeiro disparados pela Rússia na quinta-feira, 58 foram abatidos, mas quatro civis foram mortos e outros oito ficaram feridos, segundo as autoridades ucranianas</p>
         </div>
         <div class="news-item">
-            <img src="../img/arte/arte3.jpg" alt="Top Story 3" />
+            <a href="./individual.html?id=3"><img src="../img/arte/arte3.jpg" alt="Top Story 3" /></a>
             <h2>Femme nue Couchée, de Picasso, vendida por 64 milhões de euros</h2>
             <p>Leilão contou com sete peças de Picasso, e obras de Monet, Cézanne e Gauguin, entre outros, atingindo mais de 388 milhões de euros.</p>
         </div>
         <div class="news-item">
-            <img src="../img/desporto/desporto6.jpg" alt="Top Story 3" />
+            <a href="./individual.html?id=18"><img src="../img/desporto/desporto6.jpg" alt="Top Story 3" /></a>
             <h2>Doncic é o segundo mais novo a chegar aos 50 triplos-duplos na NBA</h2>
             <p>Apenas 10 jogadores na história conseguiram esta marca, com Doncic a ser apenas superado pelo lendário Oscar Robertson.</p>
         </div>
