--- a/paginas/tendencias.html
+++ b/paginas/tendencias.html
@@ -53,24 +53,24 @@
             <p>Ex-kickboxer britânico e o irmão suspeitos de integrar organização criminosa.</p>
         </div>
         <div class="news-item">
-            <a href="./individual.html?id=33"><img src="../img/tendencias/tendencias3.jpg" alt="Top Story 3" /></a>
+            <a href="./individual.html?id=27"><img src="../img/politica/politica3.jpg" alt="Top Story 3" /></a>
             <h2>Medina demite Alexandra Reis</h2>
             <p>Medina pediu à secretária de Estado do Tesouro que apresentasse demissão, o que foi "prontamente aceite".</p>
         </div>
         <div class="news-item">
-            <a href="./individual.html?id=34"><img src="../img/tendencias/tendencias4.jpg" alt="Top Story 1" /></a>
-            <h2>Marcelo exclui cenário de eleições antecipadas e quer Costa "a governar"</h2>
-            <p>"Não pode haver eleições todos os anos" e é "preferível que o Governo governe e governe cada vez melhor", disse Marcelo Rebelo de Sousa à partida de Lisboa para o Brasil, onde assistirá à posse do presidente brasileiro, Lula da Silva.</p>
+            <a href="./individual.html?id=18"><img src="../img/desporto/desporto6.jpg" alt="Top Story 3" /></a>
+            <h2>Doncic é o segundo mais novo a chegar aos 50 triplos-duplos na NBA</h2>
+            <p>Apenas 10 jogadores na história conseguiram esta marca, com Doncic a ser apenas superado pelo lendário Oscar Robertson.</p>
         </div>
         <div class="news-item">
-            <a href="./individual.html?id=35"><img src="../img/tendencias/tendencias5.jpg" alt="Top Story 2" /></a>
-            <h2>Bolsonaro sai do Brasil rumo aos EUA e falta à tomada de posse de Lula da Silva</h2>
-            <p>O ainda presidente Jair Bolsonaro deixou esta sexta-feira o Brasil, rumo aos Estados Unidos, onde irá celebrar a passagem de ano, devendo permanecer em solo americano até ao final do mês de janeiro.</p>
+            <a href="individual.html?id=12"><img src="../img/ciencia/ciencia6.jpg" alt="Top Story 3" /></a>
+            <h2>Cientistas identificam mutação genética associada a linfomas e cancro do pulmão</h2>
+            <p>Estudos recentes "de sequenciação do genoma de um grande número de tumores" demonstram "que estes têm milhares de alterações genéticas, as denominadas mutações".</p>
         </div>
         <div class="news-item">
-            <a href="./individual.html?id=36"><img src="../img/tendencias/tendencias6.jpg" alt="Top Story 3" /></a>
-            <h2>Qual é a ligação entre as tempestades de inverno e o aquecimento global?</h2>
-            <p>As fortes tempestades que têm atingido os Estados Unidos todos os invernos deixam os especialistas a investigar o porquê deste fenómeno e a sua relação com as alterações climáticas.</p>
+            <a href="./individual.html?id=20"><img src="../img/internacional/internacional2.jpg" alt="Top Story 2" /></a>
+            <h2>Kiev garante ter repelido ataque noturno de drones russos</h2>
+            <p>Dos 70 mísseis de cruzeiro disparados pela Rússia na quinta-feira, 58 foram abatidos, mas quatro civis foram mortos e outros oito ficaram feridos, segundo as autoridades ucranianas</p>
         </div>
     </div>
     
@@ -79,8 +79,7 @@
         <ul>
             <li><a href="terms-of-use.html">Termos de uso</a></li>
             <li><a href="privacy-policy.html">Política de Privacidade</a></li>
-            <li><a href="contact-us.html">Contacta nos</a></li>
-        </ul>
+            <li><a href="contact-us.html" onmouseover="animateContacts()">Contacta nos</a></li><ul id="contactAnimation"><li>Email: jornalOnline@net.com</li><li>Telefone: +351 964524156</li></ul>
     </footer>
 
     <script src="script.js"></script>
