falta subricao funcional

--- a/paginas/ciencia.html
+++ b/paginas/ciencia.html
@@ -19,8 +19,7 @@
 
         <nav>
             <ul class="menu">
-                <li><a href="sobre.html">Sobre</a></li>
-                <li><a href="servicos.html">Serviços</a></li>
+                <li><a href="subscricao.html">Subscrever</a></li>
                 <li><a href="entrar.html">Entrar</a></li>
             </ul>
         </nav>
@@ -78,9 +77,10 @@
     <footer>
         <p>Copyright 2022 Meu site de notícias</p>
         <ul>
-            <li><a href="terms-of-use.html">Termos de uso</a></li>
-            <li><a href="privacy-policy.html">Política de Privacidade</a></li>
-            <li><a href="contact-us.html" onmouseover="animateContacts()">Contacta nos</a></li><ul id="contactAnimation"><li>Email: jornalOnline@net.com</li><li>Telefone: +351 964524156</li></ul>
+          <li><a href="./termos.html">Termos de uso</a></li>
+          <li><a href="./privacidade.html">Política de Privacidade</a></li>
+          <li><a onmouseover="animateContacts()">Contacta nos</a></li><ul id="contactAnimation"><li>Email: jornalOnline@net.com</li><li>Telefone: +351 964524156</li></ul>
+        </ul>
     </footer>
 
     <script src="script.js"></script>
