--- a/paginas/entrar.html
+++ b/paginas/entrar.html
@@ -10,13 +10,13 @@
          <div class="title">
             Entrar Conta
          </div>
-         <form action="#">
+         <form action="#" id="form2">
             <div class="field">
-               <input type="text" required>
+               <input type="text" id="name" required>
                <label>Nome de Utilizador</label>
             </div>
             <div class="field">
-               <input type="password" required>
+               <input type="password" id="password" required>
                <label>Palavra-Passe</label>
             </div>
             <div class="field">
@@ -30,5 +30,6 @@
             </div>
          </form>
       </div>
+      <script src="../scripts/entrar.js"></script>
    </body>
 </html>
