--- a/paginas/registar.html
+++ b/paginas/registar.html
@@ -38,6 +38,6 @@
             </div>
          </form>
       </div>
-      <script src="../scripts/user.js"></script>
+      <script src="../scripts/registar.js"></script>
    </body>
 </html>
