--- a/paginas/subscricao.html
+++ b/paginas/subscricao.html
@@ -55,14 +55,11 @@
                     <option value="2030">2030</option>
                 </select>
             </div>
-            <div id="preco">
-                <p>Preço: 9,99€</p>
+            <div class="field">
+               <input type="submit" value="Subscrever (9,99€)">
             </div>
             <div class="field">
-               <input type="submit" value="Subscrever">
-            </div>
-            <div class="field">
-               <a href="javascript:history.back()"><input type="button" value="Voltar"></a>
+               <a href="../index.html"><input type="button" value="Voltar"></a>
             </div>
          </form>
       </div>
