--- a/paginas/internacional.html
+++ b/paginas/internacional.html
@@ -78,7 +78,7 @@
         <ul>
           <li><a href="./termos.html">Termos de uso</a></li>
           <li><a href="./privacidade.html">Política de Privacidade</a></li>
-          <li><a onmouseover="animateContacts()">Contacta nos</a></li><ul id="contactAnimation"><li>Email: jornalOnline@net.com</li><li>Telefone: +351 964524156</li></ul>
+          <li><a href="#" onmouseover="animateContacts()">Contacta nos</a></li><ul id="contactAnimation"><li>Email: jornalOnline@net.com</li><li>Telefone: +351 964524156</li></ul>
         </ul>
     </footer>
 
