--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <ul>
           <li><a href="./paginas/termos.html">Termos de uso</a></li>
           <li><a href="./paginas/privacidade.html">Política de Privacidade</a></li>
-          <li><a onmouseover="animateContacts()">Contacta nos</a></li><ul id="contactAnimation"><li>Email: jornalOnline@net.com</li><li>Telefone: +351 964524156</li></ul>
+          <li><a href="#" onmouseover="animateContacts()">Contacta nos</a></li><ul id="contactAnimation"><li>Email: jornalOnline@net.com</li><li>Telefone: +351 964524156</li></ul>
         </ul>
     </footer>
     
