--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
                 <h2>Últimas</h2>
                 <section class="news">
                     <div class="news_container">
-                        <a href="paginas/individual.html?id=2"><img src="img/ciencia/ciencia2.jpg" onclick=redirecionar()></a>
+                        <a href="paginas/individual.html?id=8"><img src="img/ciencia/ciencia2.jpg" onclick=redirecionar()></a>
                         <p class="latest_news_text">ChatGPT. O prodígio da Inteligência Artificial</p>
                     </div>
                 </section>
                 <section class="news">
                     <div class="news_container">
-                        <a href="paginas/individual.html?id=2"><img src="img/arte/arte4.jpg" onclick=redirecionar()></a>
+                        <a href="paginas/individual.html?id=4"><img src="img/arte/arte4.jpg" onclick=redirecionar()></a>
                         <p class="latest_news_text">Mais de 5 mil trabalhadores da cultura pediram apoio social</p>
                     </div>
                 </section>
@@ -112,13 +112,13 @@
                 <h2>Recomendados</h2>
                 <section class="news">
                     <div class="news_container">
-                        <a href="paginas/individual.html?id=2"><img src="img/internacional/internacional6.jpg" onclick=redirecionar()></a>
+                        <a href="paginas/individual.html?id=24"><img src="img/internacional/internacional6.jpg" onclick=redirecionar()></a>
                         <p class="latest_news_text">EUA passam a exigir teste à covid-19 para quem chega da China</p>
                     </div>
                 </section>
                 <section class="news">
                     <div class="news_container">
-                        <img src="img/politica/politica2.jpg">
+                        <a href="paginas/individual.html?id=26"><img src="img/politica/politica2.jpg"></a>
                         <p class="latest_news_text">Medina demite Alexandra Reis</p>
                     </div>
                 </section>
