--- a/index.html
+++ b/index.html
@@ -169,8 +169,9 @@
         <ul>
           <li><a href="./paginas/termos.html">Termos de uso</a></li>
           <li><a href="./paginas/privacidade.html">Política de Privacidade</a></li>
-          <li><a href="#" onmouseover="animateContacts()">Contacta nos</a></li><ul id="contactAnimation"><li>Email: jornalOnline@net.com</li><li>Telefone: +351 964524156</li></ul>
+          <li><a href="#" onmouseover="animateContacts()">Contacta nos</a></li>
         </ul>
+        <ul id="contactAnimation"><li>Email: jornalOnline@net.com</li><li>Telefone: +351 964524156</li></ul>
     </footer>
     
     <script src="./scripts/script.js"></script>
