--- a/paginas/internacional.html
+++ b/paginas/internacional.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>internacional</title>
+    <title>Internacional</title>
     <link rel="stylesheet" href="../styles/categorias.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,7 +28,7 @@
         <ul class="menu2">
             <li><a href="tendencias.html">Tendências</a></li>
             <li><a href="desporto.html">Desporto</a></li>
-            <li><a href="internacional.html">Internacional</a></li>
+            <li><a href="internacional.html" class="linha">Internacional</a></li>
             <li><a href="arte.html">Arte</a></li>
             <li><a href="politica.html">Politica</a></li>
             <li><a href="ciencia.html">Ciência</a></li>
