--- a/paginas/arte.html
+++ b/paginas/arte.html
@@ -29,7 +29,7 @@
             <li><a href="tendencias.html">Tendências</a></li>
             <li><a href="desporto.html">Desporto</a></li>
             <li><a href="internacional.html">Internacional</a></li>
-            <li><a href="arte.html">Arte</a></li>
+            <li><a href="arte.html" class="linha">Arte</a></li>
             <li><a href="politica.html">Politica</a></li>
             <li><a href="ciencia.html">Ciência</a></li>
         </ul>
