--- a/paginas/ciencia.html
+++ b/paginas/ciencia.html
@@ -31,7 +31,7 @@
             <li><a href="internacional.html">Internacional</a></li>
             <li><a href="arte.html">Arte</a></li>
             <li><a href="politica.html">Politica</a></li>
-            <li><a href="ciencia.html">Ciência</a></li>
+            <li><a href="ciencia.html" class="linha">Ciência</a></li>
         </ul>
     </div>
     <div class="rest-menu"></div>
