--- a/paginas/desporto.html
+++ b/paginas/desporto.html
@@ -27,7 +27,7 @@
     <div class="sub-menu">
         <ul class="menu2">
             <li><a href="tendencias.html">Tendências</a></li>
-            <li><a href="desporto.html">Desporto</a></li>
+            <li><a href="desporto.html" class="linha">Desporto</a></li>
             <li><a href="internacional.html">Internacional</a></li>
             <li><a href="arte.html">Arte</a></li>
             <li><a href="politica.html">Politica</a></li>
