--- a/paginas/politica.html
+++ b/paginas/politica.html
@@ -30,7 +30,7 @@
             <li><a href="desporto.html">Desporto</a></li>
             <li><a href="internacional.html">Internacional</a></li>
             <li><a href="arte.html">Arte</a></li>
-            <li><a href="politica.html">Politica</a></li>
+            <li><a href="politica.html" class="linha">Politica</a></li>
             <li><a href="ciencia.html">Ciência</a></li>
         </ul>
     </div>
