--- a/paginas/tendencias.html
+++ b/paginas/tendencias.html
@@ -26,7 +26,7 @@
     </header>
     <div class="sub-menu">
         <ul class="menu2">
-            <li><a href="tendencias.html">Tendências</a></li>
+            <li><a href="tendencias.html" class="linha">Tendências</a></li>
             <li><a href="desporto.html">Desporto</a></li>
             <li><a href="internacional.html">Internacional</a></li>
             <li><a href="arte.html">Arte</a></li>
